--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,14 @@ body {
 .header {
     font-weight: bold;
     font-size: 60px;
-    margin: 30px;
-    margin-bottom: 60px;
+    margin: 20px;
+    margin-bottom: 50px;
     font-style: italic;
 }
-
+.timerDiv {
+    height: 20px;
+    margin: 50px;
+}
 .container {
     width: 60%;
     margin: auto;
@@ -23,4 +26,6 @@ body {
     margin: 60px;
 }
 
-
+span {
+    background: darkorchid;
+}
